sandbox/output
HikerStepDef.java:11: error: cannot find symbol
        output = FtsTranslator.translate(flag, keywords);
                 ^
  symbol:   variable FtsTranslator
  location: class HikerStepDef
1 error
